# GenEx

./: CMakeLists.txt  README.md  main.cpp
benchmarks/: CMakeLists.txt  benchmark.cpp  benchmark_address_of.cpp  benchmark_cast_dynamic.cpp  benchmark_cast_smart.cpp  benchmark_cast_static.cpp  benchmark_chunk.cpp  benchmark_concat.cpp  benchmark_conversion.cpp  benchmark_cycle.cpp  benchmark_drop.cpp  benchmark_drop_last.cpp  benchmark_drop_while.cpp  benchmark_enumerate.cpp  benchmark_filter.cpp  benchmark_for_each.cpp  benchmark_genex.cpp  benchmark_indirect.cpp  benchmark_interleave.cpp  benchmark_intersperse.cpp  benchmark_iota.cpp  benchmark_join.cpp  benchmark_join_with.cpp  benchmark_map.cpp  benchmark_move_reverse.cpp  benchmark_ptr.cpp  benchmark_remove.cpp  benchmark_remove_if.cpp  benchmark_replace.cpp  benchmark_replace_if.cpp  benchmark_reverse.cpp  benchmark_set_algorithms.cpp  benchmark_slice.cpp  benchmark_split.cpp  benchmark_take.cpp  benchmark_take_last.cpp  benchmark_take_while.cpp  benchmark_transform.cpp  benchmark_tuple_nth.cpp  benchmark_view.cpp  (+2 more)
cmake/: GenExConfig.cmake.in
headers/genex/: macros.hpp
include/genex/: categories.hpp  concepts.hpp  generator.hpp  macros.hpp  meta.hpp  pipe.hpp  span.hpp  to_container.hpp  type_traits.hpp
include/genex/actions/: _action_base.hpp  clear.hpp  concat.hpp  drop.hpp  drop_while.hpp  erase.hpp  for_each.hpp  insert.hpp  pop.hpp  pop_back.hpp  pop_front.hpp  push.hpp  push_back.hpp  push_front.hpp  remove.hpp  remove_if.hpp  replace.hpp  replace_if.hpp  reverse.hpp  shuffle.hpp  slice.hpp  sort.hpp  take.hpp  take_while.hpp
include/genex/algorithms/: _algorithm_base.hpp  _concepts.hpp  accumulate.hpp  all_of.hpp  any_of.hpp  binary_search.hpp  contains.hpp  contains_if.hpp  copy.hpp  count.hpp  count_if.hpp  duplicates.hpp  equals.hpp  find.hpp  find_if.hpp  find_if_not.hpp  find_last.hpp  find_last_if.hpp  find_last_if_not.hpp  fold.hpp  fold_left.hpp  fold_left_first.hpp  fold_right.hpp  fold_right_first.hpp  max_element.hpp  min_element.hpp  minmax.hpp  none_of.hpp  position.hpp  position_last.hpp  sorted.hpp
include/genex/iterators/: _iterator_base.hpp  _iterators_base.hpp  access.hpp  advance.hpp  begin.hpp  distance.hpp  end.hpp  erase.hpp  iter_pair.hpp  next.hpp  prev.hpp
include/genex/operations/: _operation_base.hpp  _operations_base.hpp  access.hpp  at.hpp  cmp.hpp  data.hpp  empty.hpp  insert.hpp  push.hpp  push_back.hpp  push_front.hpp  size.hpp  tuple.hpp
include/genex/strings/: _concepts.hpp  _string_base.hpp  cases.hpp
include/genex/views/: _view_base.hpp  address.hpp  borrow.hpp  cast.hpp  cast_dynamic.hpp  cast_smart.hpp  cast_static.hpp  chunk.hpp  chunk_n.hpp  concat.hpp  copied.hpp  copy.hpp  cycle.hpp  deref.hpp  drop.hpp  drop_last.hpp  drop_until.hpp  drop_while.hpp  duplicates.hpp  enumerate.hpp  filter.hpp  flat.hpp  flatten.hpp  flatten_with.hpp  fold.hpp  for_each.hpp  forward.hpp  indirect.hpp  interleave.hpp  intersperse.hpp  intersperse_with.hpp  iota.hpp  join.hpp  join_with.hpp  map.hpp  materialize.hpp  move.hpp  move_reverse.hpp  ptr.hpp  remove.hpp  (+19 more)
include/genex/views2/: address_of.hpp  cast_dynamic.hpp  drop.hpp  drop_last.hpp  filter.hpp  transform.hpp  view_base.hpp
modules/genex/: CMakeLists.txt  concepts.ixx  generator.ixx  meta.ixx  type_traits.ixx
modules/genex/actions/: _action_base.ixx
modules/genex/algorithms/: _algorithm_base.ixx  accumulate.ixx  all_of.ixx  any_of.ixx  binary_search.ixx  contains.ixx  count.ixx  find.ixx
modules/genex/iterators/: advance.ixx  begin.ixx  distance.ixx  end.ixx  next.ixx
modules/genex/operations/: insert.ixx  push_back.ixx  push_front.ixx  size.ixx
modules/genex/views/: _view_base.ixx  chunk.ixx  concat.ixx  copied.ixx  cycle.ixx  drop.ixx  enumerate.ixx  filter.ixx  flat.ixx  fold.ixx  for_each.ixx  interleave.ixx  intersperse.ixx  iota.ixx  map.ixx  remove.ixx  replace.ixx  reverse.ixx  set_algorithms.ixx  slice.ixx  take.ixx  to.ixx
sources/genex/: concepts.cpp  meta.cpp
sources/genex/actions/: clear.cpp  drop.cpp  drop_while.cpp  erase.cpp  push_back.cpp  push_front.cpp  replace.cpp  slice.cpp  sort.cpp  take_while.cpp
sources/genex/algorithms/: all_of.cpp  any_of.cpp  concepts.cpp  count.cpp  find.cpp  find_if.cpp  find_last.cpp  find_last_if_not.cpp  fold_left.cpp  fold_left_first.cpp  fold_right.cpp  max_element.cpp  min_element.cpp  position.cpp
sources/genex/conditional/: if.cpp
sources/genex/iterators/: access.cpp  advance.cpp  prev.cpp
sources/genex/operations/: access.cpp  size.cpp  tuples.cpp
sources/genex/strings/: cases.cpp
sources/genex/views2/: cast_dynamic.cpp  chunk.cpp  cycle.cpp  drop.cpp  drop_last.cpp  drop_while.cpp  for_each.cpp  in.cpp  join.cpp  join_with.cpp  map.cpp  move.cpp  move_reverse.cpp  remove.cpp  replace.cpp  reverse.cpp  take_last.cpp  tuple_nth.cpp
src/genex/: concepts.cpp  generator.cpp  genex.cpp  meta.cpp  pipe.cpp  span.cpp  to_container.cpp
src/genex/actions/: clear.cpp  concat.cpp  drop.cpp  drop_while.cpp  erase.cpp  insert.cpp  pop_back.cpp  pop_front.cpp  push_back.cpp  push_front.cpp  remove.cpp  remove_if.cpp  replace.cpp  replace_if.cpp  reverse.cpp  shuffle.cpp  (+4 more)
tests/: CMakeLists.txt  test_act_clear.cpp  test_act_concat.cpp  test_act_drop.cpp  test_act_pop.cpp  test_act_push.cpp  test_act_remove.cpp  test_act_replace.cpp  test_act_reverse.cpp  test_act_shuffle.cpp  test_act_sort.cpp  test_algo_binary_search.cpp  test_algo_contains.cpp  test_algo_duplicates.cpp  test_algo_equals.cpp  test_algo_find.cpp  test_algo_fold.cpp  test_algo_minmax.cpp  test_algo_position.cpp  test_algo_qualitifiable.cpp  test_algo_sorted.cpp  test_conditional_if.cpp  test_generator.cpp  test_string_case.cpp  test_view2_filter.cpp  test_view2_transform.cpp  test_view_address.cpp  test_view_borrow.cpp  test_view_cast.cpp  test_view_chunk.cpp  test_view_concat.cpp  test_view_copy.cpp  test_view_cycle.cpp  test_view_drop.cpp  test_view_duplicates.cpp  test_view_enumerate.cpp  test_view_filter.cpp  test_view_flatten.cpp  test_view_for_each.cpp  test_view_in.cpp  (+20 more)
(+137 files in other folders)
